Disabled mods are now greyed out

--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
@@ -82,6 +82,9 @@
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="#B6DFF2"/>
             </Trigger>
+            <DataTrigger Binding="{Binding IsEnabled}" Value="False">
+                <Setter Property="Foreground" Value="#C4C4C4"/>
+            </DataTrigger>
         </Style.Triggers>
     </Style>
 </ResourceDictionary>
