--- a/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxPrimaryPathTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/TextBox/TextBoxPrimaryPathTheme.xaml
@@ -1,5 +1,6 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
+                    xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+                    xmlns:customControls="clr-namespace:MW5_Mod_Organizer_WPF.CustomControls">
     <Style TargetType="{x:Type TextBox}"
            x:Key="TextBoxPrimaryPathTheme">
         <Setter Property="Template">
