Fixed bug where Profiles couldnt save with new custom textbox control

--- a/MW5 Mod Oganizer WPF/MainWindow.xaml
+++ b/MW5 Mod Oganizer WPF/MainWindow.xaml
@@ -547,7 +547,7 @@
                         
                     </MenuItem>
                     <Separator/>
-                    <MenuItem Header="Settings" FontSize="12" Cursor="Hand" Command="{Binding OpenSettingsCommand}"/>
+                    <MenuItem Header="Options" FontSize="12" Cursor="Hand" Command="{Binding OpenSettingsCommand}"/>
                 </MenuItem>
             </Menu>
             <Menu VerticalAlignment="Center"
