--- a/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
+++ b/MW5 Mod Oganizer WPF/Views/SettingsView.xaml
@@ -8,8 +8,7 @@
         xmlns:userControls="clr-namespace:MW5_Mod_Organizer_WPF.Views.UserControls"
         xmlns:icon="http://metro.mahapps.com/winfx/xaml/iconpacks"
         mc:Ignorable="d"
-        Title="Options" Height="600
-        " Width="800" FontSize="14" Background="#D1C9C9" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow">
+        Title="Options" Height="600" Width="800" FontSize="14" Background="#D1C9C9" WindowStartupLocation="CenterOwner" WindowStyle="ToolWindow" ResizeMode="NoResize">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="100"/>
