--- a/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
+++ b/MW5 Mod Oganizer WPF/Themes/DataGrid/DataGridRowTheme.xaml
@@ -70,21 +70,41 @@
             <Trigger Property="AlternationIndex" Value="1">
                 <Setter Property="Background" Value="#F2E8E8"/>
             </Trigger>
-            <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#D2D2D2"/>
-            </Trigger>
             <DataTrigger Binding="{Binding ModViewModelStatus}" Value="Overwrites">
                 <Setter Property="Background" Value="#FFFFBDBD"/>
             </DataTrigger>
             <DataTrigger Binding="{Binding ModViewModelStatus}" Value="OverwrittenBy">
                 <Setter Property="Background" Value="#FFFFDABB"/>
             </DataTrigger>
+            <DataTrigger Binding="{Binding IsEnabled}" Value="False">
+                <Setter Property="Foreground" Value="#A6A6A6"/>
+            </DataTrigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#D2D2D2"/>
+            </Trigger>
             <Trigger Property="IsSelected" Value="True">
                 <Setter Property="Background" Value="#B6DFF2"/>
             </Trigger>
-            <DataTrigger Binding="{Binding IsEnabled}" Value="False">
-                <Setter Property="Foreground" Value="#C4C4C4"/>
-            </DataTrigger>
+            <MultiDataTrigger>
+                <MultiDataTrigger.Conditions>
+                    <Condition Binding="{Binding IsMouseOver, RelativeSource={RelativeSource Mode=Self}}" Value="True"/>
+                    <Condition Binding="{Binding IsEnabled}" Value="False"/>
+                </MultiDataTrigger.Conditions>
+
+                <MultiDataTrigger.Setters>
+                    <Setter Property="Foreground" Value="#545454"/>
+                </MultiDataTrigger.Setters>
+            </MultiDataTrigger>
+            <MultiDataTrigger>
+                <MultiDataTrigger.Conditions>
+                    <Condition Binding="{Binding IsSelected, RelativeSource={RelativeSource Mode=Self}}" Value="True"/>
+                    <Condition Binding="{Binding IsEnabled}" Value="False"/>
+                </MultiDataTrigger.Conditions>
+
+                <MultiDataTrigger.Setters>
+                    <Setter Property="Foreground" Value="#545454"/>
+                </MultiDataTrigger.Setters>
+            </MultiDataTrigger>
         </Style.Triggers>
     </Style>
 </ResourceDictionary>
